--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="catalog.html">Каталог книг</a></li>
                 <li><a href="about.html">О нас</a></li>
-                <li><a href="cart.html">Корзина</a><spdn class="cart-count">(0)</spdn></li>
+                <li><a href="cart.html">Корзина</a><span class="cart-count">(0)</span></li>
                 <li><a href="login.html">Вход/Регистрация</a></li>
             </ul>
         </nav>
@@ -36,7 +36,7 @@
             <div class="swiper new-arrivals-slider">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="book-card text-pos-tl"> 
+                        <div class="book-card text-pos-tr"> 
                             <img src="Image/Book.jpg" alt="Обложка книги 1">
                             <div class="book-info">
                                <h3>Название 1</h3> <p class="author">Автор 1</p> <p class="price">Цена 1</p> <a href="#">Подробнее</a>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                       <div class="book-card text-pos-br"> 
+                       <div class="book-card text-pos-tr"> 
                            <img src="Image/Book2.jpg" alt="Обложка книги 3">
                             <div class="book-info">
                                <h3>Название 3</h3> <p class="author">Автор 3</p> <p class="price">Цена 3</p> <a href="#">Подробнее</a>
@@ -60,7 +60,7 @@
                        </div>
                     </div>
                     <div class="swiper-slide">
-                       <div class="book-card text-pos-bl"> 
+                       <div class="book-card text-pos-tr"> 
                            <img src="Image/Book.jpg" alt="Обложка книги 4">
                             <div class="book-info">
                                <h3>Название 4</h3> <p class="author">Автор 4</p> <p class="price">Цена 4</p> <a href="#">Подробнее</a>
@@ -68,7 +68,7 @@
                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="book-card text-pos-tl"> 
+                        <div class="book-card text-pos-tr"> 
                             <img src="Image/Book1.webp" alt="Обложка книги 5">
                             <div class="book-info">
                                <h3>Название 5</h3> <p class="author">Автор 5</p> <p class="price">Цена 5</p> <a href="#">Подробнее</a>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                      <div class="swiper-slide">
-                       <div class="book-card text-pos-br"> 
+                       <div class="book-card text-pos-tr"> 
                            <img src="Image/Book.jpg" alt="Обложка книги 7">
                             <div class="book-info">
                                <h3>Название 7</h3> <p class="author">Автор 7</p> <p class="price">Цена 7</p> <a href="#">Подробнее</a>
@@ -92,7 +92,7 @@
                        </div>
                     </div>
                      <div class="swiper-slide">
-                       <div class="book-card text-pos-bl"> 
+                       <div class="book-card text-pos-tr"> 
                            <img src="Image/Book1.webp" alt="Обложка книги 8">
                             <div class="book-info">
                                <h3>Название 8</h3> <p class="author">Автор 8</p> <p class="price">Цена 8</p> <a href="#">Подробнее</a>
@@ -100,7 +100,7 @@
                        </div>
                     </div>
                      <div class="swiper-slide">
-                        <div class="book-card text-pos-tl"> 
+                        <div class="book-card text-pos-tr   "> 
                             <img src="Image/Book2.jpg" alt="Обложка книги 9">
                             <div class="book-info">
                                <h3>Название 9</h3> <p class="author">Автор 9</p> <p class="price">Цена 9</p> <a href="#">Подробнее</a>
